    * Both new menu locations are automatically merged into the mobile menu.
    * Developers can add to side panel by hooking to `themeblvd_side_panel`.
    * Developers can extend whether the side panel shows by filtering `themeblvd_do_side_panel` boolean.
* New: Choose to display related posts as a small grid at *Appearance > Theme Options > Content > Single Posts > Related Posts Style*.
* New: You can now use the CSS class `tb-scoll-to` to set any generic button or link to scroll to an element ID on the current page.
* New: Template file `content-blog.php` for the blog post style has been added.
* New: Added filter `themeblvd_posts_page_mode`, which can be filter to list, grid, or showcase.
* Improvement: Design for post in blog and single post has been simplified.
* Improvement: Design enhancements to default post showcase display.
* Improvement: Design enhancements to Magnific Popup lightbox navigation.
* Improvement: Design enhancements to Divider element.
* Improvement: Design enhancements to Progress Bars element.
* Improvement: Design enhancements to Milestone element.
* Improvement: Design enhancements to Milestone Ring element.
* Improvement: Design enhancements to Testimonial element.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.
* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
* Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
* Improvement: More default spacing around sections and elements in custom layouts.